# automesh

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  LICENSE  Makefile  README.md  book.toml  build.rs  pyproject.toml  template.py
.github/: Makefile
.github/workflows/: Book.yml  Bump.yml  Python.yml  Rust.yml  draft-pdf.yml  rust.yml  test.yml
benches/: block.py  block.rs  compare.py
book/: SUMMARY.md  analysis.md  cli.md  defeaturing.md  development.md  dualization.md  examples.md  getting_started.md  installation.md  introduction.md  isosurface.md  minimum_working_example.md  smoothing.md
book/analysis/: conforming_v_segmented.md  conforming_v_segmented_new.md  sphere_with_shells.md
book/cli/: ascii_to_binary_stl.py  convert.md  defeature.md  defeature_blobs.md  diff.md  extract.md  left-handed_tetrahedron.inp  mesh.md  metrice_hexahedral_outtakes.md  metrics.md  metrics_hexahedral.md  metrics_tetrahedral.md  metrics_tetrahedral.py  metrics_triangular.md  metrics_triangular.py  noise_augmentation.py  obj_to_binary_stl.py  random_tetrahedron.inp  remesh.md  remesh_bunny.md  remesh_bunny_figures.py  remesh_bunny_tolerance.py  remesh_figures.py  remesh_iterations.py  remesh_sphere.md  segment.md  simple_tetrahedron.inp  smooth.md  smooth_laplace.md  smooth_theory.md  smoothing_figures.py  smoothing_test.py  sphere.jou
book/defeature/: defeature.py
book/development/: rust.md
book/dualization/: README.md
book/isosurface/: subdivision.md
book/minimum_working_example/: octahedron.py  octahedron_roundtrip.py
book/reviews/: j_and_sj.py  jacobian_evolution.py  tong_2024.md
book/smoothing/: laplace_hierarchical.md  noise_augmentation.py  smoothing.py  smoothing_figures.py  taubin.md
pub/: methods.tex
sandbox/: automesh-outline-abstract-paper.docx  flowers.py  logs.md  springs.py
src/: lib.rs  main.rs  py.rs
tests/: affine.rs  cli.rs  fem.py  fem.rs  foo.rs  tessellation.rs  voxel.rs
(+147 files in other folders)
