[package]
authors = ["Chad B. Hovey <chovey@sandia.gov>", "Michael R. Buche <mrbuche@sandia.gov>"]
categories = ["mathematics", "science"]
description = "Automatic mesh generation."
documentation = "https://docs.rs/automesh"
edition = "2024"
homepage = "https://autotwin.github.io/automesh"
keywords = ["mesh"]
license = "GPL-3.0"
name = "automesh"
repository = "https://github.com/autotwin/automesh"
version = "0.3.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "=4.5.45", features = ["derive"] }
chrono = "=0.4.41"
conspire = { features = ["fem"], git = "https://github.com/mrbuche/conspire.rs.git", branch="dev" }
ndarray = { version = "=0.16.1", features = ["rayon"] }
ndarray-npy = "=0.9.1"
netcdf = { version = "=0.11.0", features = ["ndarray", "static"] }
pyo3 = { version = "=0.25.1", features = ["extension-module"], optional = true }
stl_io = "=0.8.5"
vtkio = "=0.6.3"

[features]
profile = []
python = ["dep:pyo3"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/katex.html"]

[profile.release]
codegen-units = 1
lto = true
