[package]
authors = ["Chad B. Hovey <chovey@sandia.gov>", "Michael R. Buche <mrbuche@sandia.gov>"]
categories = ["mathematics", "science"]
description = "Automatic mesh generation."
documentation = "https://docs.rs/automesh"
edition = "2024"
exclude = [".github/", "book*", "pubs/", "sandbox/", "tests/"]
homepage = "https://autotwin.github.io/automesh"
keywords = ["mesh"]
license = "GPL-3.0"
name = "automesh"
repository = "https://github.com/autotwin/automesh"
version = "0.4.2"

[dependencies]
clap = { version = "=4.6.2", features = ["derive"] }
conspire = { version = "=0.7.1", features = ["geometry", "netcdf"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/katex.html"]

[profile.release]
codegen-units = 1
lto = true
